[gd_scene load_steps=13 format=3 uid="uid://dx0iq2jaeu1gp"]

[ext_resource type="Script" path="res://Level2.gd" id="1_swatg"]
[ext_resource type="Texture2D" uid="uid://bvfswxxeljugx" path="res://Images/gradient-galaxy-background_23-2148983655.jpg" id="2_0dvnr"]
[ext_resource type="FontFile" uid="uid://dkppgt0hpuagh" path="res://fonts/Robot Go.ttf" id="3_ehwrx"]
[ext_resource type="PackedScene" uid="uid://deyvy83bi0rnp" path="res://texture_rect.tscn" id="4_2g16j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_puj8m"]
bg_color = Color(0.235294, 0.231373, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jwv8"]
bg_color = Color(0.427451, 0.603922, 0.882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3sq7"]
bg_color = Color(0.235294, 0.231373, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fpcn"]
bg_color = Color(0.427451, 0.603922, 0.882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c4m3"]
bg_color = Color(0.235294, 0.231373, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1nqw"]
bg_color = Color(0.427451, 0.603922, 0.882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hud43"]
bg_color = Color(0.345098, 0.345098, 0.705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1ki1"]
bg_color = Color(0.427451, 0.603922, 0.882353, 1)

[node name="Level2" type="Node2D"]
script = ExtResource("1_swatg")

[node name="Background" type="TextureRect" parent="."]
offset_left = -124.0
offset_right = 1670.0
offset_bottom = 1346.0
texture = ExtResource("2_0dvnr")

[node name="LevelLabel" type="Label" parent="."]
offset_left = 633.0
offset_top = 44.0
offset_right = 886.0
offset_bottom = 82.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 33
text = "Level 2
Neptune"
horizontal_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Questionbox" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 117.0
offset_top = 414.0
offset_right = 1500.0
offset_bottom = 1268.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
color = Color(0.563008, 0.783668, 0.841635, 1)
metadata/_edit_use_anchors_ = true

[node name="answersbox" type="ColorRect" parent="."]
offset_left = 1188.0
offset_top = 412.0
offset_right = 1500.0
offset_bottom = 993.0
size_flags_horizontal = 4
color = Color(0.477058, 0.511252, 0.8841, 1)
metadata/_edit_use_anchors_ = true

[node name="SentenceLabel" type="Label" parent="."]
offset_left = 138.0
offset_top = 430.0
offset_right = 994.0
offset_bottom = 1151.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 25
text = "Testing"
vertical_alignment = 3
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="AnswerKeyLabel" type="Label" parent="."]
offset_left = 1272.0
offset_top = 436.0
offset_right = 1405.0
offset_bottom = 480.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 20
text = "Answer Key:"
metadata/_edit_use_anchors_ = true

[node name="Text1" parent="." instance=ExtResource("4_2g16j")]
offset_left = 388.0
offset_top = 822.0
offset_right = 566.0
offset_bottom = 870.0
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="Text2" parent="." instance=ExtResource("4_2g16j")]
offset_left = 148.0
offset_top = 693.0
offset_right = 316.0
offset_bottom = 737.0
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="Text3" parent="." instance=ExtResource("4_2g16j")]
offset_left = 178.0
offset_top = 1007.0
offset_right = 417.0
offset_bottom = 1101.0
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="SubmitButton" type="Button" parent="."]
offset_left = 1021.0
offset_top = 878.0
offset_right = 1162.0
offset_bottom = 928.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_puj8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_8jwv8")
text = "Submit"
metadata/_edit_use_anchors_ = true

[node name="NextLevel" type="Button" parent="."]
offset_left = 1030.0
offset_top = 424.0
offset_right = 1171.0
offset_bottom = 474.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_e3sq7")
theme_override_styles/hover = SubResource("StyleBoxFlat_7fpcn")
text = "Next Level"
metadata/_edit_use_anchors_ = true

[node name="ErrorNext" type="Label" parent="."]
offset_left = 996.0
offset_top = 485.0
offset_right = 1184.0
offset_bottom = 604.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.815686, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ehwrx")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="HelpButton" type="Button" parent="."]
offset_left = 1388.0
offset_top = 345.0
offset_right = 1476.0
offset_bottom = 395.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7c4m3")
theme_override_styles/hover = SubResource("StyleBoxFlat_l1nqw")
text = "Help"
metadata/_edit_use_anchors_ = true

[node name="PrintButton" type="Button" parent="."]
offset_left = 749.0
offset_top = 1177.0
offset_right = 859.0
offset_bottom = 1223.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ehwrx")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_hud43")
theme_override_styles/hover = SubResource("StyleBoxFlat_d1ki1")
text = "Print"
metadata/_edit_use_anchors_ = true

[node name="errorlabel2" type="Label" parent="."]
offset_left = 875.0
offset_top = 1133.0
offset_right = 1063.0
offset_bottom = 1252.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.172167, 0.278619, 0.122815, 1)
theme_override_fonts/font = ExtResource("3_ehwrx")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="SubmitButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PrintButton" to="." method="_on_button_3_pressed"]
